worked on spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,10 +33,8 @@ h1 {
 color: gray;
 font-size: 1.75em;
 text-align: center;
-text-transform: uppercase;
-
-
 }
+
 
 h2 {
 color: #FF7F50;
@@ -45,10 +43,11 @@ text-align: center;
 }
 
 h3 {
-color: gray;
+color: white;
 font-size: 1.75em;
 text-align: center;
 text-transform: uppercase;
+font-family: 'Open-Sans', sans-serif;
 }
 
 h4 {
@@ -63,54 +62,60 @@ text-align: center;
 text-transform: uppercase;
 }
 
+h6 {
+color: gray;
+font-size: 1.75em;
+text-align: center;
+text-transform: uppercase;
+margin: 20px;
+}
+
 p {
 color: gray;
 font-size: .9em;
-font-family: playfair, serif;
+font-family: 'playfair', serif;
 }
 
 ul {
-padding: 0;   
-width: 100%; 
+list-style: none;
 }
 
 hr {
 border: 1px solid white;
 }
 
+
 /* Layout styles */
 
-.title {
-background: none;
-color: gray;
-display: inline-block;
-font-size: 3em;
-list-style: none;
-margin-bottom: 30px;
+.main-heading {
 text-align: center;
 width: 100%;
 }
 
-.nav {
-padding: 30px;
+.main-name {
+color: gray;
+font-size: 2em;
+margin-top: 20px;
+text-align: center;
+width: 100%;
 }
 
-.main-nav .nav-links {
-background: #FF7F50;
-color: white;
+.main-nav a {
+background-color: #FF7F50;
+color: rgb(255, 255, 255);
 display: inline-block;
 list-style: none;
 margin-bottom: 10px;
-padding: 10px;
+padding: 10px; 
 text-align: center;
 text-transform: uppercase;
 width: 100%;
 }
 
-.profile-image {
-margin: auto;
-padding: 30px;
-width: 100%;
+.main-header {
+background-color: #FF7F50;
+height: 50%;
+text-align: center;
 }
 
 .bio {
@@ -121,21 +126,17 @@ padding: 0 20px 0 20px;
 text-align: center;
 }
 
-.main-header {
-background-color: #FF7F50;
-height: 50%;
-margin-bottom: 20px;
-text-align: center;
+.profile-image {
+margin: auto;
+padding: 30px;
+width: 100%;
 }
 
-.marketing,
-.search,
-.travel,
-.favorite,
-.photo,
-.calc {
+.col {
 display: inline-block;
-margin: 20px;
+line-height: 1.5em;
+margin-right: 20px;
+margin-left: 20px;
 text-align: center;
 }
 
@@ -144,13 +145,27 @@ img {
 max-width: 100%;
 }
 
+.other-skills {
+color: #FF7F50;
+display: inline-block;
+font-weight: 400;
+list-style: none;
+text-align: center;
+width: 100%;
+}
+
+.skills {
+    padding: 10px;
+}
+
 footer {
 background-color: #FF7F50;
 color: white;
 font-size: .9em;
-height: 350px;
+height: 275px;
 margin: 0;
-padding: 20px;
+padding-right: 20px;
+padding-left: 20px;
 text-align: center;
 }
 
@@ -163,24 +178,15 @@ color: white;
     font-weight: bold;
 }
 
-.footer-name {
-display: inline-block;
-margin-right: 50px;
-margin-top: 50px;
-}
-
-.footer-top {
-display: inline-block;
-}
-
-.footer-break {
-border: 1px solid white;
-margin-top: 50px;
+.footer-nav {
+    font-family: 'open-sans', serif;
 }
 
 .footer-name,
 .footer-top {
-    font-size: 2em;
+display: inline-block;
+font-size: 1.5em;
+
 }
 
 .footer-name {
@@ -193,25 +199,14 @@ float: right;
 
 .nav-bottom {
 display: none;
+text-transform: uppercase;
+font-weight: 100;
 }
 
 /* Pseudo Styles */
 
 a:hover {
 color: turquoise;
-}
-
-
-/* Portfolio Page */
-
-.portfolio-header {
-background: turquoise;
-}
-
-/* Contact Page */
-
-.contact-links {
-color: coral;
 }
 
 /* Clearfix rule */
@@ -225,23 +220,23 @@ display: table;
 
 @media (min-width: 768px) {
 
-a {
-color: #FF7F50;    
+.main-name {
+padding-top: 20px;
+}
+
+.main-nav,
+.main-nav li {
+display: inline-block;
+}
+
+.main-nav a {
+    background: none;
+    color: #FF7F50;
 }
 
 .main-header {
+padding-top: 20px;
 width: 100%;
-}
-
-.nav {
-text-align: center;
-}
-
-.main-nav .nav-links {
-background: none;
-color: #FF7F50;
-display: inline;
-text-align: center;
 }
 
 .profile-image {
@@ -260,18 +255,15 @@ width: 60%
 text-align: center;
 }
 
-.marketing,
-.search,
-.travel,
-.favorite,
-.photo,
-.calc {
+.col {
+padding: 10px;
 width: 40%;
 }
 
 .nav-bottom {
 display: block;
 float: right;
+font-size: 1.5em;
 }
 
 .nav-bottom li {
@@ -292,34 +284,19 @@ display: none;
 
 @media (min-width: 1024px) {
 
-.nav {
-display: inline-block;
-margin: 0;
-padding: 0;
-text-align: right;
-}
 
-.title {
+.main-name {
 float: left;
-margin: 10px;
-padding: 0;
 width: 30%;
 }
 
-.main-nav .nav-links {
-font-size: 1.25em;
-margin: 0;
-padding-right: 30px;
+.main-nav {
+float: right;
 width: 60%;
+margin-right: -100px;
 }
 
-.marketing,
-.search,
-.travel,
-.favorite,
-.photo,
-.calc {
+.col {
 width: 25%;
 }
 
-}
